After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774911 - mikey: gst_mikey_message_new_from_caps does not generate a correct message
mikey: gst_mikey_message_new_from_caps does not generate a correct message
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.10.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-23 13:00 UTC by ulfo
Modified: 2016-12-23 17:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst_mikey_message_new_from_caps patch (1.14 KB, patch)
2016-11-23 13:00 UTC, ulfo
committed Details | Review

Description ulfo 2016-11-23 13:00:11 UTC
Created attachment 340595 [details] [review]
gst_mikey_message_new_from_caps patch

The function gst_mikey_message_new_from_caps does not generate a correct MIKEY message, several fields in Security Policy payload (SP) are incorrect
Comment 1 Edward Hervey 2016-11-23 16:48:30 UTC
Well spotted !

commit a4c1dfe4cd55d9275f345e503cda1d4ee8dd4210
Author: Ulf Olsson <ulfo@axis.com>
Date:   Wed Nov 23 13:48:06 2016 +0100

    mikey: Generate the correct SRTP policy
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774911
Comment 2 Edward Hervey 2016-11-23 16:51:08 UTC
and backported to 1.10

commit dab60e10f6f4976b0881fc6eae88763ca227c3f3
Author: Ulf Olsson <ulfo@axis.com>
Date:   Wed Nov 23 13:48:06 2016 +0100

    mikey: Generate the correct SRTP policy
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774911
Comment 3 Tim-Philipp Müller 2016-12-23 17:31:59 UTC
Looks like this bug was supposed to be closed :)