mikey: Generate the correct SRTP policy

https://bugzilla.gnome.org/show_bug.cgi?id=774911